--- a/index.html
+++ b/index.html
@@ -1,24 +1,4 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2016 Adobe Systems Incorporated. All rights reserved.
-
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
 
 <head>
@@ -67,9 +47,11 @@
     <script>
         window.onload = function()
         {
-            $("#tipPercent").on('slidestop', calculateTip); //or something like document.getElementById('sss').addEventListener('click', doSomething, false);
-            $('#billAmount').on('change', calculateTip);
-            $('#numberOfPeople').on('change', calculateTip);
+            //$("#tipPercent").on('slidestop', calculateTip); //or something like document.getElementById('sss').addEventListener('click', doSomething, false);
+            //slicestop means only trigger the event when I stop slidding, but I want to trigger the event while I am sliding
+            $("#tipPercent").on('change', calculateTip); //input range type
+            $('#billAmount').on('change', calculateTip); //will need to tab out for change to happen for the input text field
+            $('#numberOfPeople').on('change', calculateTip); //input range type
             $('#result').hide();
         }
         
